--- a/EX-XMHelper/EX-XMHelper/Base.lproj/Main.storyboard
+++ b/EX-XMHelper/EX-XMHelper/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JsE-q0-wLQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JsE-q0-wLQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8PP-NA-XEi" id="9id-gt-dnd">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -87,7 +87,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoListCell" id="sYJ-CV-Cjo" customClass="VideoListCollectionViewCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoListCell" id="sYJ-CV-Cjo" customClass="VideoListCell">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -128,9 +128,10 @@
                                     <constraint firstItem="UKQ-Js-ZZs" firstAttribute="top" secondItem="sYJ-CV-Cjo" secondAttribute="top" constant="5" id="lqK-wz-YC6"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="backGroundView" destination="UKQ-Js-ZZs" id="YJP-wE-z2x"/>
-                                    <outlet property="iconImageView" destination="RMq-N6-oeW" id="LoK-IQ-lSV"/>
-                                    <outlet property="nameLabel" destination="hYu-6B-X6k" id="AHK-Uc-OVC"/>
+                                    <outlet property="backGroundView" destination="UKQ-Js-ZZs" id="AIF-eG-bJF"/>
+                                    <outlet property="iconImageView" destination="RMq-N6-oeW" id="opq-gH-XDa"/>
+                                    <outlet property="nameLabel" destination="hYu-6B-X6k" id="TDz-lV-RZQ"/>
+                                    <segue destination="Jz3-ZK-80a" kind="push" identifier="VideoDetail" id="1ja-Ig-OIe"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -158,6 +159,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ed4-X9-vEC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="941.60000000000002" y="-604.04797601199402"/>
+        </scene>
+        <!--Video Detail View Controller-->
+        <scene sceneID="OJ7-gO-bxz">
+            <objects>
+                <tableViewController id="Jz3-ZK-80a" customClass="VideoDetailViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="alf-Xh-Xbu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="VideoDetailCell" rowHeight="100" id="wT4-ql-q9z" customClass="VideoDetailCell">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wT4-ql-q9z" id="fb8-ix-sBG">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VZr-aB-H9C">
+                                            <rect key="frame" x="10" y="5" width="90" height="89"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="90" id="O2H-Tg-VhA"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hof-PK-Sfd">
+                                            <rect key="frame" x="110" y="10" width="255" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAP-mP-SYl">
+                                            <rect key="frame" x="110" y="74" width="145" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lenght" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ln-tC-pNI">
+                                            <rect key="frame" x="265" y="74" width="100" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="xjK-bS-NfW"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="9Ln-tC-pNI" secondAttribute="bottom" constant="10" id="5TU-Qh-Wff"/>
+                                        <constraint firstItem="9Ln-tC-pNI" firstAttribute="leading" secondItem="oAP-mP-SYl" secondAttribute="trailing" constant="10" id="EgG-Qe-V6O"/>
+                                        <constraint firstItem="hof-PK-Sfd" firstAttribute="leading" secondItem="VZr-aB-H9C" secondAttribute="trailing" constant="10" id="M1C-Ic-Se2"/>
+                                        <constraint firstAttribute="bottom" secondItem="VZr-aB-H9C" secondAttribute="bottom" constant="5" id="Yga-et-5PU"/>
+                                        <constraint firstAttribute="bottom" secondItem="oAP-mP-SYl" secondAttribute="bottom" constant="10" id="fPM-AF-dhj"/>
+                                        <constraint firstItem="oAP-mP-SYl" firstAttribute="leading" secondItem="VZr-aB-H9C" secondAttribute="trailing" constant="10" id="fVt-5c-e0A"/>
+                                        <constraint firstAttribute="trailing" secondItem="9Ln-tC-pNI" secondAttribute="trailing" constant="10" id="jRf-fg-2DO"/>
+                                        <constraint firstItem="hof-PK-Sfd" firstAttribute="top" secondItem="fb8-ix-sBG" secondAttribute="top" constant="10" id="lGs-7L-GQJ"/>
+                                        <constraint firstItem="VZr-aB-H9C" firstAttribute="leading" secondItem="fb8-ix-sBG" secondAttribute="leading" constant="10" id="ncJ-r9-wVt"/>
+                                        <constraint firstItem="VZr-aB-H9C" firstAttribute="top" secondItem="fb8-ix-sBG" secondAttribute="top" constant="5" id="pYp-6D-lFa"/>
+                                        <constraint firstAttribute="trailing" secondItem="hof-PK-Sfd" secondAttribute="trailing" constant="10" id="rUF-ea-zzz"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="iconImageView" destination="VZr-aB-H9C" id="8bj-qe-ATe"/>
+                                    <outlet property="itemTitleLabel" destination="hof-PK-Sfd" id="WbH-bu-NxX"/>
+                                    <outlet property="lenghtTimeLabel" destination="9Ln-tC-pNI" id="C9R-jC-eIP"/>
+                                    <outlet property="publishTimeLabel" destination="oAP-mP-SYl" id="c65-x2-eg1"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Jz3-ZK-80a" id="bkb-BO-gKI"/>
+                            <outlet property="delegate" destination="Jz3-ZK-80a" id="nSR-vJ-OP9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="yxG-CO-vGe"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gTa-vK-6yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="-604.04797601199402"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4gp-RN-bqM">
